<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/infoTitle"
            style="@style/infoTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_info_label_title" />

        <TextView
            android:id="@+id/infoValue"
            style="@style/infoValueStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/infoOriginalTitle"
            style="@style/infoTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_info_label_original" />

        <TextView
            android:id="@+id/infoOriginalValue"
            style="@style/infoValueStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/infoRatingTitle"
            style="@style/infoTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_info_label_rating" />

        <TextView
            android:id="@+id/infoRatingValue"
            style="@style/infoValueStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/infoReleaseDateTitle"
            style="@style/infoTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_info_label_release_date" />

        <TextView
            android:id="@+id/infoReleaseDateValue"
            style="@style/infoValueStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="value" />
    </LinearLayout>

    <TextView
        android:id="@+id/infoDescriptionTitle"
        style="@style/infoTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_info_label_description" />

    <TextView
        android:id="@+id/infoDescriptionValue"
        style="@style/infoValueStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="value" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listVideos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false" />

</LinearLayout>